update images path

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -26,13 +26,13 @@
             <!--<img src="assets/img/detailbig1.jpg" alt="" class="img-fluid">-->
             <ngb-carousel>
               <ng-template ngbSlide>
-                <img src="../../assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="">
+                <img src="../assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="">
               </ng-template>
               <ng-template ngbSlide>
-                <img src="../../assets/product_images/{{ item.imageFolder }}/2.jpeg" alt="">
+                <img src="../assets/product_images/{{ item.imageFolder }}/2.jpeg" alt="">
               </ng-template>
               <ng-template ngbSlide>
-                <img src="../../assets/product_images/{{ item.imageFolder }}/3.jpeg" alt="">
+                <img src="../assets/product_images/{{ item.imageFolder }}/3.jpeg" alt="">
               </ng-template>
             </ngb-carousel>
           </div>
