--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -126,7 +126,7 @@
           <div class="product">
             <div class="image">
               <a href="details/{{ item.id }}">
-                <img src="../../assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="" class="img-fluid">
+                <img src="../assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="" class="img-fluid">
               </a>
             </div>
             <div class="text">
