Update image paths

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -26,13 +26,13 @@
             <!--<img src="assets/img/detailbig1.jpg" alt="" class="img-fluid">-->
             <ngb-carousel>
               <ng-template ngbSlide>
-                <img src="../assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="">
+                <img src="assets/product_images/{{ item.imageFolder }}/1.jpeg" alt="">
               </ng-template>
               <ng-template ngbSlide>
-                <img src="../assets/product_images/{{ item.imageFolder }}/2.jpeg" alt="">
+                <img src="assets/product_images/{{ item.imageFolder }}/2.jpeg" alt="">
               </ng-template>
               <ng-template ngbSlide>
-                <img src="../assets/product_images/{{ item.imageFolder }}/3.jpeg" alt="">
+                <img src="assets/product_images/{{ item.imageFolder }}/3.jpeg" alt="">
               </ng-template>
             </ngb-carousel>
           </div>
@@ -44,23 +44,6 @@
           <div class="ribbon new">
             <div class="theribbon">NEW</div>
             <div class="ribbon-background"></div>
-          </div>
-          <div class="row product__thumbs">
-            <!--<div class="col-xs-4">
-              <a href="assets/img/detailbig1.jpg" class="thumb">
-                <img src="assets/img/detailsmall1.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-xs-4">
-              <a href="assets/img/detailbig2.jpg" class="thumb">
-                <img src="assets/img/detailsmall2.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-xs-4">
-              <a href="assets/img/detailbig3.jpg" class="thumb">
-                <img src="assets/img/detailsmall3.jpg" alt="" class="img-fluid">
-              </a>
-            </div>-->
           </div>
         </div>
         <div class="col-sm-4 offset-sm-1">
